--- a/components/sidebar.html
+++ b/components/sidebar.html
@@ -3,37 +3,37 @@
   <nav>
     <ul>
       <li id="dashboard-link" data-route="dashboard">
-        <a href="/pages/admin/dashboard.html" >
+        <a href="/pages/dashboard.html" >
           <i class="fas fa-tachometer-alt"></i>
           <span>Dashboard</span>
         </a>
       </li>
       <li id="categories-link" data-route="categories">
-        <a href="/pages/admin/categories.html">
+        <a href="/pages/categories.html">
           <i class="fas fa-tags"></i>
           <span>Categories</span>
         </a>
       </li>
       <li id="products-link" data-route="products">
-        <a href="/pages/admin/products.html">
+        <a href="/pages/products.html">
           <i class="fas fa-box"></i>
           <span>Products</span>
         </a>
       </li>
       <li id="orders-link" data-route="orders">
-        <a href="/pages/admin/orders.html" >
+        <a href="/pages/orders.html" >
           <i class="fas fa-users"></i>
           <span>Orders</span>
         </a>
       </li>
       <li id="users-link" data-route="users">
-        <a href="/pages/admin/users.html">
+        <a href="/pages/users.html">
           <i class="fas fa-user"></i>
           <span>Users</span>
         </a>
       </li>
       <li id="search-link" data-route="search">
-        <a href="/pages/admin/search.html">
+        <a href="/pages/search.html">
           <i class="fas fa-search"></i>
           <span>Search</span>
         </a>
