add js and validation files

--- a/components/sidebar.html
+++ b/components/sidebar.html
@@ -3,37 +3,43 @@
   <nav>
     <ul>
       <li id="dashboard-link" data-route="dashboard">
-        <a href="/pages/dashboard.html" >
+        <a href="/pages/admin/dashboard.html" data-route="dashboard">
           <i class="fas fa-tachometer-alt"></i>
           <span>Dashboard</span>
         </a>
       </li>
       <li id="categories-link" data-route="categories">
-        <a href="/pages/categories.html">
+        <a href="/pages/admin/categories.html" data-route="categories">
           <i class="fas fa-tags"></i>
           <span>Categories</span>
         </a>
       </li>
       <li id="products-link" data-route="products">
-        <a href="/pages/products.html">
+        <a href="/pages/admin/products.html" data-route="products">
           <i class="fas fa-box"></i>
           <span>Products</span>
         </a>
       </li>
-      <li id="orders-link" data-route="orders">
-        <a href="/pages/orders.html" >
+      <li id="orders-link" data-route="subscribers">
+        <a href="/pages/admin/orders.html" data-route="subscribers">
           <i class="fas fa-users"></i>
           <span>Orders</span>
         </a>
       </li>
       <li id="users-link" data-route="users">
-        <a href="/pages/users.html">
+        <a href="/pages/admin/users.html" data-route="users">
           <i class="fas fa-user"></i>
           <span>Users</span>
         </a>
       </li>
+      <li id="reports-link"  data-route="reports">
+        <a href="/pages/admin/reports.html" data-route="reports">
+          <i class="fas fa-chart-bar"></i>
+          <span>Reports</span>
+        </a>
+      </li>
       <li id="search-link" data-route="search">
-        <a href="/pages/search.html">
+        <a href="/pages/admin/search.html" data-route="search">
           <i class="fas fa-search"></i>
           <span>Search</span>
         </a>
