--- a/components/header.html
+++ b/components/header.html
@@ -1,7 +1,7 @@
 <!-- Header -->
 <header class="admin-header">
   <div class="logo">
-    <img src="/assets/imgs/2591708.png" alt="Logo">
+    <img src="/assets/2591708.png" alt="Logo">
     <h1>Amazon</h1>
   </div>
   <div class="user-menu">
@@ -10,8 +10,7 @@
     </button>
     <div class="user-profile">
       <span>Welcome, Admin</span>
-      <img src="/assets/imgs/avatar.png" alt="user" class="avatar">
+      <img src="/assets/avatar.png" alt="Admin" class="avatar">
     </div>
   </div>
 </header>
-
