--- a/product_cart.css
+++ b/product_cart.css
@@ -54,9 +54,9 @@ h1 {
   gap: 15px;
 }
 
-.cart-product-info img {
+  .product-info img {
   width: 80px;
-  height: auto;
+  height: 80px;
   border-radius: 6px;
 }
 
