--- a/css/style.css
+++ b/css/style.css
@@ -423,7 +423,8 @@ img {
 
 .product-card img {
   max-width: 100%;
-  height: auto;
+  width: 100%;
+  height: 15rem;
   border-radius: 0.5rem;
 }
 
